# ai-messenger

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: dependencies.py  main.py
app/db/: database.py  models.py
app/src/: agents.py
app/v1/endpoints/: message.py
shared/: exceptions.py
testing/: test_agent.py  test_database.py
