[tool.poetry]
name = "ai-messenger"
version = "0.1.0"
description = ""
authors = ["timfdev"]
readme = "README.md"

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
langchain = "^0.3.15"
langchain-openai = "^0.3.1"
langchain-community = "^0.3.15"
googlemaps = "^4.10.0"
tinder-ai = "0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
